--- a/static/taxonTrees.css
+++ b/static/taxonTrees.css
@@ -115,11 +115,13 @@ div.taxonChilds {
   cursor: pointer;
 }
 
-
-div.taxonWithTools:hover {
-	background-color: rgba(100,100,200,0.09);
+/*
+.childTaxonList >li > div.taxonWithTools:hover {
+	background-color: rgba(250,250,250,0.3);
 	border-bottom: 1px solid rgb(180, 180, 185);
 }
+*/
+
 div.taxonWithTools {
 	display: block;
 	margin: 2px;
