--- a/static/iucn.css
+++ b/static/iucn.css
@@ -274,6 +274,11 @@ div#evaluationMeta {
 .submitButtonContainer > button {
   padding: 1em;
 }
+#cancelButton {
+	margin-left: 8em;
+	padding: 0.5em;
+	color: grey;
+}
 button.add, .addHabitatPair {
   color: green;
   font-size: 10px;
