--- a/static/taxonTrees.css
+++ b/static/taxonTrees.css
@@ -369,3 +369,12 @@ div.loading {
 #sendTaxonDialog label {
 	width: 50px;
 }
+
+#criticalDataDialog td  {
+	min-width: 150px;
+	padding-bottom: 2em;
+}
+#criticalDataDialog th {
+	text-align: left;
+	padding-bottom: 1em;
+}
