--- a/static/taxonTrees.css
+++ b/static/taxonTrees.css
@@ -392,3 +392,7 @@ div.taxonInfo .icons > * {
 	text-align: left;
 	padding-bottom: 1em;
 }
+.criticalAction {
+	font-variant: small-caps;
+	color: red;
+}
