--- a/static/taxonTrees.css
+++ b/static/taxonTrees.css
@@ -406,11 +406,12 @@ div.taxonInfo .icons > * {
 	color: red;
 }
 
-.taxonId {
+.taxonId, .scinameLink {
 	font-size: 7px;
 	color: blue;
 	text-decoration: underline;
 	margin-right: 2px;
+	cursor: pointer;
 }
 .hiddenTaxon::BEFORE {
 	content: "HIDDEN";
