--- a/static/taxonomy.css
+++ b/static/taxonomy.css
@@ -318,7 +318,7 @@ tr.errorMessage td {
 	padding-top: 0px;
 	white-space: nowrap;
 	overflow: hidden;
-	font-size: 90%;
+	font-size: 13px;
 	vertical-align: top;
 }
 
