--- a/static/taxonomy.css
+++ b/static/taxonomy.css
@@ -238,7 +238,7 @@ tr.errorMessage td {
   padding-bottom: 10em;
 }
 
-#editTaxonDescriptions .portlet {
+/**#editTaxonDescriptions .portlet {
 	margin: 0;
 	margin-bottom: 2em;
 } 
@@ -246,7 +246,7 @@ tr.errorMessage td {
 #editTaxonDescriptions .portlet-header {
 	padding: 0.6em;
 	font-size: 1.2em;
-}
+}*/
 #editTaxonDescriptions table {
 	border-collapse: separate;
 	width: 100%;
@@ -270,8 +270,7 @@ tr.errorMessage td {
 .emptyContent {
 	margin: 0;
 	padding: 2em;
-	border: 1px solid rgb(220,220,220);
-	border-radius: 5px;
+	border: none;
 }
 #editTaxonDescriptions .ui-widget-content {
 	background: none;
@@ -418,4 +417,8 @@ table#helpTable td, table#helpTable th {
 }
 table#helpTable img {
 	vertical-align: bottom;
+}
+
+.ui-corner-all {
+	border-radius: 0px;
 }
